[package]
name = "aoc-2023-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1-1"
path = "src/bin/day1/day1-1.rs"

[[bin]]
name = "day1-2"
path = "src/bin/day1/day1-2.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/day4.rs"

[[bin]]
name = "day5-1"
path = "src/bin/day5/day5-1.rs"

[dependencies]
itertools = "0.12.0"
num_cpus = "1.16.0"
spmc = "0.3.0"
tokio = { version = "1.34.0", features = ["sync", "macros"] }
