[package]
name = "aoc-2023-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1-1"
path = "src/bin/day1/day1-1.rs"

[[bin]]
name = "day1-2"
path = "src/bin/day1/day1-2.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/day4.rs"

[[bin]]
name = "day5-1"
path = "src/bin/day5/day5-1.rs"

[[bin]]
name = "day5-2"
path = "src/bin/day5/day5-2.rs"

[[bin]]
name = "day6"
path = "src/bin/day6/day6.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
